syntax = "proto3";

package dd;

option go_package = "dd";

service DD {
  rpc Auth (AuthRequest) returns (AuthResponse);
}

message AuthRequest {
  string token = 1;
}

message AuthResponse {
  string id = 1;
  string name = 2;
  string imageURL = 3;
}